parser: Remove redundant list from type literals
The parser handled the case where type literals allowed the form
`Bits<a, b>` but such type literals aren't allowed and must be written
as `Bits<a><b>`.

This is also represented int he documentation with the line:
> When defining tensors the size of every dimension has to be enclosed
> separately in angle brackets.

Removing the extra list makes type checking quite a bit easier.